--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         <section class="app-section">
             <h2>Popular Shopping Apps</h2>
             <div class="app-grid">
-                <a href="https://amzn.to/3XKM5Ro" target="_blank"><img src="logos/amazon.png" alt="Amazon"></a>
-                <a href="https://fktr.in/qrGRLxj" target="_blank"><img src="logos/flipkart.png" alt="Flipkart"></a>
-                <a href="https://ajiio.in/MPgLKj9" target="_blank"><img src="logos/ajio.png" alt="Ajio"></a>
-                <a href="https://myntr.it/Ik4UFQ5" target="_blank"><img src="logos/myntra.png" alt="Myntra"></a>
-                <a href="https://bitli.in/cjtij2c" target="_blank"><img src="logos/nykaa.png" alt="Nykaa"></a>
-                <a href="https://bitli.in/6OmEgvu" target="_blank"><img src="logos/croma.png" alt="Croma"></a>
-                <a href="https://bitli.in/EX1b94p" target="_blank"><img src="logos/tata_cliq.png" alt="Tata Cliq"></a>
-                <a href="https://bitli.in/EX1b94p" target="_blank"><img src="logos/nykaa_fashion.png" alt="Nykaa Fashion"></a>
+                <a href="https://amzn.to/3XKM5Ro" target="_blank"><img src="amazon.png" alt="Amazon"></a>
+                <a href="https://fktr.in/qrGRLxj" target="_blank"><img src="flipkart.png" alt="Flipkart"></a>
+                <a href="https://ajiio.in/MPgLKj9" target="_blank"><img src="ajio.png" alt="Ajio"></a>
+                <a href="https://myntr.it/Ik4UFQ5" target="_blank"><img src="myntra.png" alt="Myntra"></a>
+                <a href="https://bitli.in/cjtij2c" target="_blank"><img src="nykaa.png" alt="Nykaa"></a>
+                <a href="https://bitli.in/6OmEgvu" target="_blank"><img src="croma.png" alt="Croma"></a>
+                <a href="https://bitli.in/EX1b94p" target="_blank"><img src="tata_cliq.png" alt="Tata Cliq"></a>
+                <a href="https://bitli.in/EX1b94p" target="_blank"><img src="nykaa_fashion.png" alt="Nykaa Fashion"></a>
             </div>
         </section>
     </main>
